# autotools

./: INSTALL.md  Makefile.am  README.md  configure.ac  libobj.h  libpole.h  main.cpp  zadanie2.cpp
