bin_PROGRAMS = zadanie2
zadanie2_SOURCES = main.cpp libpole.h libobj.h
zadanie2_DEPENDENCIES = libpole.la libobj.la
lib_LTLIBRARIES = libpole.la libobj.la
libpole_la_SOURCES = libpole.h
libpole_la_LTFLAGS = -static
libobj_la_SOURCES = libobj.h
libobj_la_LTFLAGS = -shared
zadanie2_LDADD = libpole.la libobj.la
